[gd_scene load_steps=3 format=3 uid="uid://vnc2knqqd55d"]

[ext_resource type="Script" path="res://scenes/enemy_spawner/enemy_spawner.gd" id="1_sbasq"]
[ext_resource type="PackedScene" uid="uid://c1vyyeeodm0em" path="res://scenes/enemy/enemy.tscn" id="2_h43m1"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_sbasq")
enemy_scene = ExtResource("2_h43m1")

[node name="SpawnRateTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPointTop" type="Marker2D" parent="SpawnPoints"]
position = Vector2(2.08165e-12, 15)

[node name="SpawnPointBottom" type="Marker2D" parent="SpawnPoints"]
position = Vector2(2.08165e-12, 170)

[connection signal="timeout" from="SpawnRateTimer" to="." method="_on_timer_timeout"]
